--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Estilo geral */
+
 :root {
   --primary: rgba(170, 0, 33, 1);
   --gray-100: rgba(226, 226, 226, 1); /* #e2e2e2 */
@@ -14,13 +16,16 @@
 }
 
 body {
-  padding-top: 3.5rem;
+  color: var(--gray-800);
+  overflow-x: hidden;
+  position: relative;
 }
 
 a {
   text-decoration: none;
   color: inherit;
   transition: 0.3s;
+  letter-spacing: -0.8 px;
 
   &:hover {
     color: var(--primary);
@@ -35,7 +40,6 @@ ul {
   max-width: 1188px;
   min-height: 100vh;
   margin-inline: auto;
-  position: relative;
 }
 
 .section-wrapper {
@@ -43,26 +47,66 @@ ul {
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-inline: 1.5rem;
-  font-size: 1.25rem;
-  height: 5rem;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 
-  ul {
+  .header-container {
+    max-width: 1188px;
+    margin-inline: auto;
+
     display: flex;
-    gap: 2.75rem;
     justify-content: space-between;
-    font-weight: 500;
+    align-items: center;
+    padding-inline: 1.5rem;
+    padding-top: 3.5rem;
+    font-size: 1.25rem;
+
+    ul {
+      display: flex;
+      gap: 2.75rem;
+      justify-content: space-between;
+      font-weight: 500;
+    }
   }
 }
 
 .red-area {
-  background: linear-gradient(to right, var(--primary) 320px, transparent 0%);
+  background: linear-gradient(to right, var(--primary) 328px, transparent 0%);
 }
 
+/* Estilo por seção */
+
 #hero {
+  width: 100%;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 3rem;
   min-height: 890px;
+
+  .text-container {
+    display: grid;
+    flex-direction: column;
+    justify-content: center;
+    font-weight: 500;
+
+    span {
+      font-size: 1.5rem;
+    }
+
+    h1 {
+      font-size: 4.5rem;
+      color: var(--primary);
+      margin-block: 0.25rem 1rem;
+    }
+
+    p {
+      font-size: 1.125rem;
+      color: var(--gray-700);
+      width: 80%;
+    }
+  }
 }
