--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 /* Estilo geral */
 
 :root {
+  --primary-200: rgba(255, 229, 234, 1);
+  --primary-400: rgba(194, 0, 38, 1);
   --primary: rgba(170, 0, 33, 1);
-  --gray-100: rgba(226, 226, 226, 1); /* #e2e2e2 */
-  --gray-200: rgba(225, 226, 230, 1); /* #e1e2e6 */
+  --gray-100: rgba(225, 226, 230, 0.2); /* #e1e2e6 */
+  --gray-200: rgba(226, 226, 226, 1); /* #e2e2e2 */
   --gray-700: rgba(94, 94, 94, 1);
   --gray-800: rgba(73, 73, 73, 1);
 }
@@ -16,6 +18,7 @@
 }
 
 body {
+  background-color: var(--gray-100);
   color: var(--gray-800);
   overflow-x: hidden;
   position: relative;
@@ -26,6 +29,8 @@ a {
   color: inherit;
   transition: 0.3s;
   letter-spacing: -0.8 px;
+  font-weight: 500;
+  font-size: 1.25rem;
 
   &:hover {
     color: var(--primary);
@@ -44,19 +49,18 @@ ul {
 
 .section-wrapper {
   padding-inline: 1.5rem;
+  padding-top: 4rem;
 }
 
 header {
   position: fixed;
   top: 0;
-  bottom: 0;
   left: 0;
   right: 0;
 
   .header-container {
     max-width: 1188px;
     margin-inline: auto;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -73,8 +77,55 @@ header {
   }
 }
 
+.title-h2 {
+  color: var(--primary);
+  font-size: 2.5rem;
+  font-weight: 500;
+  margin-bottom: 3rem;
+
+  &::before {
+    content: ".";
+    width: 1px;
+    height: 100%;
+    background-color: var(--primary);
+    margin-right: 8px;
+  }
+}
+
 .red-area {
   background: linear-gradient(to right, var(--primary) 328px, transparent 0%);
+}
+
+.primary-button {
+  background-color: var(--primary);
+  color: white;
+  transition: 0.3s;
+  padding-inline: 3.5rem;
+  border-radius: 999px;
+  height: 3.5rem;
+  width: max-content;
+  display: grid;
+  place-items: center;
+
+  &:hover {
+    background-color: var(--primary-400);
+    color: white;
+  }
+}
+
+.secondary-button {
+  color: var(--primary);
+  border: 1px solid var(--primary);
+  padding-inline: 3.5rem;
+  border-radius: 999px;
+  height: 3.5rem;
+  width: max-content;
+  display: grid;
+  place-items: center;
+
+  &:hover {
+    background-color: var(--primary-200);
+  }
 }
 
 /* Estilo por seção */
@@ -88,9 +139,8 @@ header {
   min-height: 890px;
 
   .text-container {
-    display: grid;
+    display: flex;
     flex-direction: column;
-    justify-content: center;
     font-weight: 500;
 
     span {
@@ -107,6 +157,25 @@ header {
       font-size: 1.125rem;
       color: var(--gray-700);
       width: 80%;
+    }
+
+    footer {
+      margin-top: 4.5rem;
+      display: flex;
+      gap: 1.5rem;
+    }
+  }
+}
+
+#about {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5rem;
+
+  .text-container {
+    font-size: 1.25rem;
+    p {
+      margin-bottom: 24px;
     }
   }
 }
