--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ a {
   letter-spacing: -0.8 px;
   font-weight: 500;
   font-size: 1.25rem;
+  display: block;
 
   &:hover {
     color: var(--primary);
@@ -226,6 +227,41 @@ header {
         font-weight: 500;
         font-size: 1.125rem;
       }
+    }
+  }
+}
+
+#projects {
+  .cards-container {
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: repeat(3, 1fr);
+
+    .image-container {
+      border-radius: 1rem;
+      overflow: hidden;
+      height: 100%;
+      transition: 0.3s;
+
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        transition: 0.3s;
+      }
+
+      &:hover img {
+        transform: scale(1.05);
+      }
+    }
+
+    span {
+      display: block;
+      text-align: center;
+      font-size: 1.25rem;
+      font-weight: 500;
+      color: var(--primary);
+      margin-top: 1rem;
     }
   }
 }
