--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a {
   letter-spacing: -0.8 px;
   font-weight: 500;
   font-size: 1.25rem;
-  display: block;
+  display: inline-block;
 
   &:hover {
     color: var(--primary);
@@ -263,5 +263,22 @@ header {
       color: var(--primary);
       margin-top: 1rem;
     }
+  }
+}
+
+body > footer {
+  background-color: var(--primary);
+  color: white;
+  font-size: 1.25rem;
+  font-weight: 500;
+  height: 3.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  &:hover a {
+    color: white;
+    text-decoration: underline;
   }
 }
