--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
   --primary-200: rgba(255, 229, 234, 1);
   --primary-400: rgba(194, 0, 38, 1);
   --primary: rgba(170, 0, 33, 1);
-  --gray-100: rgba(225, 226, 230, 0.2); /* #e1e2e6 */
-  --gray-200: rgba(226, 226, 226, 1); /* #e2e2e2 */
+  --gray-100: rgba(249, 249, 250, 1)
+  --gray-200: rgba(226, 226, 226, 1); 
   --gray-700: rgba(94, 94, 94, 1);
   --gray-800: rgba(73, 73, 73, 1);
 }
@@ -167,7 +167,7 @@ header {
       width: 80%;
     }
 
-    footer {
+    .buttons-container {
       margin-top: 4.5rem;
       display: flex;
       gap: 1.5rem;
@@ -214,7 +214,7 @@ header {
       }
     }
 
-    footer {
+    .card-footer {
       display: flex;
       flex-direction: column;
       gap: 0.25rem;
@@ -266,7 +266,93 @@ header {
   }
 }
 
-body > footer {
+#contact {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 4rem;
+  align-items: center;
+
+  form {
+    max-width: 30.25rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2.25rem;
+    font-weight: 500;
+
+    .input-box {
+      border: 2px solid var(--primary);
+      border-radius: 2.5rem;
+      padding-inline: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      position: relative;
+      font-size: 1.25rem;
+      color: var(--gray-700);
+    }
+
+    label {
+      background-color: white;
+      padding-inline: 0.5rem;
+      color: var(--primary);
+      position: absolute;
+      top: -14px;
+      left: 1.5rem;
+    }
+
+    input,
+    textarea {
+      background-color: transparent;
+      border: none;
+      outline: none;
+      font-size: inherit;
+      height: 4rem;
+
+      &::placeholder {
+        color: var(--gray-700);
+      }
+    }
+
+    textarea {
+      resize: none;
+      padding-top: 1rem;
+      height: 12rem;
+    }
+
+    button {
+      font-size: 1.25rem;
+      font-weight: 500;
+      outline: none;
+      border: none;
+      cursor: pointer;
+      width: 100%;
+    }
+  }
+
+  .info-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    .info-row {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+
+      &:nth-child(3) {
+        margin-bottom: 4rem;
+      }
+    }
+
+    span {
+      font-size: 1.25rem;
+      font-weight: 500;
+      color: var(--primary);
+    }
+  }
+}
+
+footer {
   background-color: var(--primary);
   color: white;
   font-size: 1.25rem;
